--- a/app/views/people/index.html.erb
+++ b/app/views/people/index.html.erb
@@ -1,6 +1,6 @@
 <p id="notice"><%= notice %></p>
 
-<h1>Listing People and does this update go thru?</h1>
+<h1>Listing People and does Capistrano work here?</h1>
 
 <table>
   <thead>
